# py-fastapi-online-cinema

./: .env.sample  README.md  alembic.ini  docker-compose-local.yml  pyproject.toml
alembic/: env.py
src/: main.py  tasks.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  database.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: f28acf922216_initial_migration.py
src/database/models/: __init__.py  accounts.py  carts.py  movies.py  orders.py  payments.py
src/notifications/: emails.py  interfaces.py
src/routes/: __init__.py  accounts.py  carts.py  movies.py  orders.py  payments.py  profiles.py
src/schemas/: __init__.py  accounts.py  carts.py  movies.py  orders.py
