[tool.poetry]
name = "src"
version = "0.1.0"
description = "Online cinema"
authors = ["Vitalii <vetali5700gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.2"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
